testsuite/tests/implicit-types/implicit_kinds_syntax_error.compilers.reference
File "implicit_kinds_syntax_error.ml", line 8, characters 19-20:
8 | [@@@implicit_kind ('a : float64)]
                       ^
Error: Syntax error: "operator" expected.
