testsuite/tests/implicit-types/implicit_kinds_syntax_error.ml
(* TEST
 setup-ocamlc.byte-build-env;
 ocamlc_byte_exit_status = "2";
 ocamlc.byte;
 check-ocamlc.byte-output;
*)

[@@@implicit_kind ('a : float64)]
